data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_629.wast
;; 10. **Complex Control Flow with Multiple Exits**: Code a nested loop scenario with complex control flow involving multiple `br` and `br_if` instructions leading to various exits and reentries in different blocks and nested loops. This stress-tests the implementation’s handling of nested control structures, verifying correct flow according to the loop’s depth and scope.  These tests focus on Mismanagement of Block Nesting by ensuring proper handling of nested control structures, operand stack management, and correct interpretation of branch depths, particularly targeting the differences between WebAssembly and wizard_engine implementations.

(assert_invalid
  (module 
    (func $complex-nested-loops (param i32) (result i32 i32)
      (local i32)
      (block (result i32 i32)
        (loop (param i32) (result i32 i32)
          (br_if 1 (i32.eqz (local.get 0)))
          (local.set 1 (i32.add (local.get 1) (i32.const 1)))
          (block (result i32 i32)
            (loop (param i32) (result i32 i32)
              (br_if 1 (i32.lt_s (local.get 0) (i32.const 10)))
              (br 2))))
        (i32.const 1) (i32.const 2)))
    (local.get 1)
  )
  "type mismatch"
)